# bch_sc2_cpp

./: CMakeLists.txt  README.md
examples/: save_load.cc
project/IM/: CMakeLists.txt  drawIMptr_list.m
project/IM/datafile/: IM_arr.txt  IM_arr_3row.txt  IM_arr_enemy.txt  IM_arr_enemy_3row.txt  IM_arr_self.txt  IM_arr_self_3row.txt  IMptr_list.txt  IMptr_list_0.txt  IMptr_list_1.txt  IMptr_list_2.txt
project/IM/include/: IMBot.h  InfluenceMap.h  Micro_TSP.h  MyAlgorithm.h
project/IM/src/: IMBot.cpp  InfluenceMap.cpp  MyAlgorithm.cpp  main.cpp
project/OFEC_sc2/: .gitignore  CMakeLists.txt  Files.cmake  Notes.md  OFEC Filter.lnk  SrcFiles_test.cmake  test.cmake  toDoList.md
project/OFEC_sc2/core/: definition.h  global.cpp  global.h  instance_manager.cpp  instance_manager.h
project/OFEC_sc2/core/algorithm/: algorithm.cpp  algorithm.h  individual.h  multi_population.h  population.h  termination.cpp  termination.h
project/OFEC_sc2/core/problem/: domain.h  encoding.cpp  encoding.h  optima.h  problem.cpp  problem.h  solution.h
project/OFEC_sc2/core/problem/continuous/: continuous.cpp  continuous.h  function.cpp  function.h
project/OFEC_sc2/core/problem/uncertainty/: dynamic.cpp  dynamic.h  noisy.cpp  noisy.h
project/OFEC_sc2/core/record/: record.cpp  record.h
project/OFEC_sc2/instance/algorithm/combination/: set_com_alg.h
project/OFEC_sc2/instance/algorithm/combination/aco/: aco.h  aco_pop.h
project/OFEC_sc2/instance/algorithm/combination/gl/: gl_adaptor_com.h  gl_com.h  gl_pop_seq.h
project/OFEC_sc2/instance/algorithm/constrained/dcnsgaii_de/: dcnsgaii_de.cpp  dcnsgaii_de.h
project/OFEC_sc2/instance/algorithm/dynamic/: dynamic_pso.h  metrics_dynamic.cpp  metrics_dynamic.h
project/OFEC_sc2/instance/algorithm/dynamic/amp_de/: amp_de.cpp  amp_de.h
project/OFEC_sc2/instance/algorithm/dynamic/amp_pso/: amp_pso.cpp  amp_pso.h
project/OFEC_sc2/instance/algorithm/dynamic/cpso/: cpso.cpp  cpso.h  cpso_particle.cpp  cpso_particle.h  cpso_subswarm.cpp  cpso_subswarm.h
project/OFEC_sc2/instance/algorithm/dynamic/cpsor/: cpsor.cpp  cpsor.h
project/OFEC_sc2/instance/algorithm/dynamic/dynde/: dynde.cpp  dynde.h  dynde_individual.cpp  dynde_individual.h  dynde_subpopulation.cpp  dynde_subpopulation.h
project/OFEC_sc2/instance/algorithm/dynamic/ftmpso/: ftmpso.cpp  ftmpso.h  ftmpso_subswarm.cpp  ftmpso_subswarm.h
project/OFEC_sc2/instance/algorithm/dynamic/hmso/: hmso.cpp  hmso.h  hmso_subswarm.cpp  hmso_subswarm.h
project/OFEC_sc2/instance/algorithm/dynamic/mqso/: mqso.cpp  mqso.h  mqso_particle.cpp  mqso_particle.h  mqso_subswarm.cpp  mqso_subswarm.h
project/OFEC_sc2/instance/algorithm/dynamic/samo/: samo.cpp  samo.h
project/OFEC_sc2/instance/algorithm/dynamic/spso/: spso.cpp  spso.h  spso_particle.cpp  spso_particle.h  spso_subswarm.cpp  spso_subswarm.h
project/OFEC_sc2/instance/algorithm/global/canonical_de/: canonical_de.cpp  canonical_de.h
project/OFEC_sc2/instance/algorithm/multi_objective/: moea_de_pop.h
project/OFEC_sc2/instance/record/: rcr_vec_real.cpp  rcr_vec_real.h
project/OFEC_sc2/instance/record/dynamic/: rcr_vec_real_dynamic.cpp  rcr_vec_real_dynamic.h
project/OFEC_sc2/run/: custom_method.h  custom_parameter.cpp  custom_record.cpp  main.cpp  prime_method.cpp  prime_method.h  run.cpp
project/OFEC_sc2/test/: test_COM.cpp  test_COP.cpp  test_CSIWDN.cpp  test_DOP.cpp  test_MMOP.cpp  test_MOP.cpp  test_Tt_fun.cpp  test_airport_planning.cpp  test_clustering.cpp  test_core_fun.cpp  test_example.cpp  test_functional.cpp  test_kd_tree.cpp  test_lstm.cpp  test_matrix.cpp  test_nondominated_sorting.cpp  test_something.cpp
project/OFEC_sc2/utility/: factory.h  functional.h  myexcept.h
project/OFEC_sc2/utility/clustering/: apc.h  apd.h  dpc.cpp  dpc.h  fcm.cpp  fcm.h  fdc.h  group.h  hslh.h  nbc.h
project/OFEC_sc2/utility/cubic_spline/: cubic_spline.h
project/OFEC_sc2/utility/kd-tree/: kdtree_space.h
project/OFEC_sc2/utility/linear_algebra/: matrix.cpp  matrix.h  vector.cpp  vector.h
project/OFEC_sc2/utility/machine_learning/libtorch/: data_set.h
project/OFEC_sc2/utility/noisy_fun/: elementary_function.cpp  elementary_function.h  noisy_fun.cpp  noisy_fun.h
project/OFEC_sc2/utility/nondominated_sorting/: deductive_sort.h  fast_sort.h  filter_sort.h
project/OFEC_sc2/utility/random/: extreal.h  newran.cpp  newran.h
project/OFEC_sc2/utility/typevar/: typevar.cpp  typevar.h
project/test/: CMakeLists.txt
project/test/src/: main.cpp
(+1040 files in other folders)
